--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/*.ts": {
-      "runtime": "@vercel/node@3.3.0"
+      "runtime": "@vercel/node@stable"
     }
   }
 }
